src/app/globals.css
@import url("https://fonts.googleapis.com/css2?family=Ovo&family=Poppins:wght@400;500;600;700&display=swap");
@import "tailwindcss";

:root {
  color-scheme: light dark;

  font-synthesis: none;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;

  --border: oklch(73.152% 0.01748 17.299);
  --background: oklch(93.296% 0.01074 76.461);
  --muted-background: oklch(89.521% 0.01225 42.92);
  --foreground: oklch(22.324% 0.00154 16.369);
  --muted-foreground: oklch(47.915% 0.02764 48.049);
  --secondary: oklch(63.516% 0.13619 145.709);
  --secondary-foreground: oklch(92.268% 0.02386 145.583);
  --primary: oklch(60.231% 0.07571 196.53);
  --primary-foreground: oklch(90.923% 0.01734 174.359);
  --accent: oklch(46.456% 0.1085 356.158);
  --accent-foreground: oklch(89.26% 0.03012 327.359);
  --tertiary: oklch(65.429% 0.10875 96.277);
  --tertiary-foreground: oklch(91.925% 0.02448 119.641);
}

@theme inline {
  --color-background: var(--background);
  --color-foreground: var(--foreground);
  --color-border: var(--border);
  --color-muted-background: var(--muted-background);
  --color-muted-foreground: var(--muted-foreground);
  --color-secondary: var(--secondary);
  --color-secondary-foreground: var(--secondary-foreground);
  --color-primary: var(--primary);
  --color-primary-foreground: var(--primary-foreground);
  --color-accent: var(--accent);
  --color-accent-foreground: var(--accent-foreground);
  --color-tertiary: var(--tertiary);
  --color-tertiary-foreground: var(--tertiary-foreground);
  --font-handwriting: "Ovo", serif;
  --font-sans: "Poppins", sans-serif;
  --font-serif: "Ovo", serif;

  --animate-marquee: marquee 40s linear infinite;
  --animate-marquee-reverse: marquee-reverse 40s linear infinite;

  @keyframes marquee {
    0% {
      transform: translateX(-50%);
    }
    100% {
      transform: translateX(0%);
    }
  }

  @keyframes marquee-reverse {
    0% {
      transform: translateX(0%);
    }
    100% {
      transform: translateX(-50%);
    }
  }
}

.light,
[data-theme="light"] {
  --border: oklch(73.152% 0.01748 17.299);
  --background: oklch(93.296% 0.01074 76.461);
  --muted-background: oklch(89.521% 0.01225 42.92);
  --foreground: oklch(22.324% 0.00154 16.369);
  --muted-foreground: oklch(47.915% 0.02764 48.049);
  --secondary: oklch(63.516% 0.13619 145.709);
  --secondary-foreground: oklch(92.268% 0.02386 145.583);
  --primary: oklch(60.231% 0.07571 196.53);
  --primary-foreground: oklch(90.923% 0.01734 174.359);
  --accent: oklch(46.456% 0.1085 356.158);
  --accent-foreground: oklch(89.26% 0.03012 327.359);
  --tertiary: oklch(65.429% 0.10875 96.277);
  --tertiary-foreground: oklch(91.925% 0.02448 119.641);
}

.dark,
[data-theme="dark"] {
  --border: oklch(39.709% 0.00403 16.71);
  --background: oklch(22.324% 0.00154 16.369);
  --muted-background: oklch(26.886% 0.00598 17.251);
  --foreground: oklch(89.036% 0.01087 76.465);
  --muted-foreground: oklch(66.327% 0.02795 41.898);
  --secondary: oklch(63.516% 0.13619 145.709);
  --secondary-foreground: oklch(92.268% 0.02386 145.583);
  --primary: oklch(60.231% 0.07571 196.53);
  --primary-foreground: oklch(90.923% 0.01734 174.359);
  --accent: oklch(46.456% 0.1085 356.158);
  --accent-foreground: oklch(89.26% 0.03012 327.359);
  --tertiary: oklch(65.429% 0.10875 96.277);
  --tertiary-foreground: oklch(91.925% 0.02448 119.641);
}

body {
  background: var(--background);
  color: var(--foreground);
  font-family: "Poppins", sans-serif;
  position: relative;
}

body:has(dialog[open]) {
  overflow: hidden;
}

::view-transition-new(root) {
  z-index: 1;
}

::view-transition-old(root) {
  z-index: 2;
  animation: wipeRight 0.5s ease-in-out;
}

@keyframes wipeRight {
  from {
    clip-path: polygon(0% 0%, 0% 100%, 100% 100%, 100% 0%);
  }
  to {
    clip-path: polygon(0% 0%, 0% 100%, 0% 0%, 100% 0%);
  }
}

